fixed chome's autocomplete from overlapping label

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@ h1 {
   font-weight: 500;
   margin: 0 0 15px 0;
 }
+
+label {
+  z-index: 1 !important;
+}
